resolved explore button invisible for mobile view

--- a/src/app/component/app-public-nav-bar/app-public-nav-bar.component.scss
+++ b/src/app/component/app-public-nav-bar/app-public-nav-bar.component.scss
@@ -99,7 +99,8 @@
 //   padding-left: 1em ;
 // }
 .btn-clr{
-  color: black !important;
+  color: white !important;
   padding-left: 1em ;
+  background:#865ba0!important;
 }
 
